--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Assignment Solution for model two</title>
+<title>Assignment Solution for Module 2</title>
 
 <style>
 	
